tests/errors/compiler/not_string_in_stanfunc/warnings/int_argument.c
int main() 
{	
	int a,b;
	strcmp(a,b);
	return 0;
}
